# scomod

./: .replit  421725683308560385.txt  788071146234576896.txt  794670350503247872.txt  keep_alive.py  main.py  pyproject.toml
COgs/: auto.py  fun.py  help.py  logstaff.py  moderaion.py  ssu.py
data/: profanity.txt
